fix: P4ADEV-4219 fix authorization for API SOAP paaSILChiediStoricoPagamenti and paaSILChiediPosizioniAperte (#184)